[bumpversion]
current_version = 0.1.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize =
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = production
values =
	dev
	production

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:viss/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = viss
version = attr:viss.__version__
author = attr:viss.__version__
author_email = rbeyer@seti.org
description = The VIPER Science package is software to support the activities of the Volatiles Investigating Polar Exploration Rover (VIPER) Science Team.
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/NeoGeographyToolkit/vipersci
classifiers =
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Development Status :: 2 - Pre-Alpha
	Natural Language :: English

[options]
packages = find:
python_requires = >=3.6

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ["setup.py"]

