[bumpversion]
current_version = 0.11.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = production
values = 
	dev
	production

[bumpversion:file:src/vipersci/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = vipersci
version = attr:vipersci.__version__
author = vipersci Developers
author_email = Ross.A.Beyer@nasa.gov
description = The VIPER Science package is software to support the activities of the Volatiles Investigating Polar Exploration Rover (VIPER) Science Team.
license = Apache 2
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
keywords = VIPER
url = https://github.com/NeoGeographyToolkit/vipersci
classifiers = 
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Development Status :: 2 - Pre-Alpha
	Natural Language :: English

[options]
install_requires = 
	genshi
	geopandas
	numpy
	rasterio
	pandas
	psycopg2
	pyproj
	scikit-image
	scikit-learn
	setuptools
	shapely
	sqlalchemy
	tifftools
include_package_data = True
package_dir = 
	=src
packages = find:
python_requires = >=3.7
tests_require = pytest
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	accrual = vipersci.carto.accrual:main
	anaglyph = vipersci.vis.anaglyph:main
	anom_pixel = vipersci.vis.anom_pixel:main
	bundle_install = vipersci.pds.bundle_install:main
	colorforge = vipersci.carto.colorforge:main
	dice_buffer = vipersci.carto.dice_buffer:main
	dissolve_dice = vipersci.carto.dissolve_dice:main
	get_position = vipersci.carto.get_position:main
	image_stats = vipersci.vis.image_statistics:main
	labelmaker = vipersci.pds.labelmaker.cli:main
	msolo_simulator = vipersci.carto.msolo_simulator:main
	nirvss_simulator = vipersci.carto.nirvss_simulator:main
	nss_modeler = vipersci.carto.nss_modeler:main
	nss_simulator = vipersci.carto.nss_simulator:main
	traverse_interpolator = vipersci.carto.traverse_interpolator:main
	tri2gpkg = vipersci.carto.tri2gpkg:main
	template_test = vipersci.vis.pds.template_test:main
	vis_create_browse = vipersci.vis.pds.create_browse:main
	vis_create_image = vipersci.vis.create_image:main
	vis_create_mmgis_pano = vipersci.vis.create_mmgis_pano:main
	vis_create_pano = vipersci.vis.create_pano:main
	vis_create_pano_product = vipersci.vis.pds.create_pano_product:main
	vis_create_tif = vipersci.vis.create_tif:main
	vis_create_raw = vipersci.vis.pds.create_raw:main
	vis_create_dbs = vipersci.vis.db.create_vis_dbs:main
	vis_pano_check = vipersci.vis.pano_check:main
	viseer = vipersci.vis.viseer:main

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max_line_length = 88
extend-ignore = E203

[aliases]
test = pytest
